--- a/storys.html
+++ b/storys.html
@@ -887,9 +887,9 @@
         //hide and show yellow items
         $(document).ready(function () {
             $("#btn-dream").click(function () {
-                $(".one").show();
+                $(".one").toggle();
                 $("#btn-dream").click(function () {
-                    $("#hide").hide();
+                    $("#hide").toggle();
                 });
             });
         });
